# audiosplit

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  lmd_exploration_notebook.ipynb  pyproject.toml
apps/: README.md
apps/models/jules_model_1/: main.py
apps/website/: app.py
apps/website/components/: __init__.py
apps/website/components/multitrack_audio/: __init__.py  setup.py
apps/website/components/multitrack_audio/frontend/: index.html  package-lock.json  package.json
apps/website/components/multitrack_audio/frontend/src/: MultitrackComponent.tsx  index.tsx
audiosplit/: README.md  __init__.py
audiosplit/cli/: README.md  cli_main.py  data.py  doctor.py
audiosplit/config/: environment.py
audiosplit/data/: dataset.py  loader.py  multitrack.py  preprocessing.py
documentation/: README.md  contributing.md
documentation/project/: dataset.md  midi_files.md
scripts/: lmd_explorer.py  main.py  midi_separation_model.py
