[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audiosplit"
version = "0.0.1"
authors = [
    {name = "Anatole-DC", email = "adechauveron@gmail.com"}
]
readme = "README.md"
requires-python=">=3.10.6"
description = "Extract indivudal instruments from an audio file."
keywords = [
    "machine-learning",
    "deep-learning",
    "datascience",
    "music",
    "MIDI",
]

dependencies = [
    "python-dotenv",    # Handles dotfiles
    "tensorflow",       # Neural networks
    "scikit-learn",     # Machine learning
    "pandas",
    "seaborn",
    "librosa",
    "pretty-midi",
    "scipy",
    "matplotlib",
    "tqdm"
]

[project.optional-dependencies]
jupyter  = [
    "jupyterlab",
    "notebook",
    "jupyter-book"
]
dev = [
    "black",            # Code format
    "flake8"            # Code linter
]
test = [
    "pytest"            # Unit tests
]

[project.scripts]
package-hello = "package.cli.cli_main:main"

[tool.setuptools.packages.find]
where = ["."]
